--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <h2>Abstract</h2>
       <p>
         Pre-existing mechanisms such as {{MediaDevices/getDisplayMedia()}} allow Web applications to
-        initiate screen-capture. If the user chooses to share a tab, the capturing application would
-        have a video {{MediaStreamTrack}}. Mechanisms such as [[mediacapture-region|Region Capture]]
+        initiate screen-capture. If the user chooses to share a tab, the capturing application
+        has a video {{MediaStreamTrack}}. Mechanisms such as [[mediacapture-region|Region Capture]]
         allow this track to be mutated - performing some operation on the captured frames. (In the
         case of [[mediacapture-region|Region Capture]], this mutation consists of cropping.)
       </p>
