--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>
           Consider an "editor" Web application (text-editor, image-editor, slides-editor or
           video-editor). Such applications often include a main content area, surrounded by various
-          toolbars, drop-down menus and widgets which allow the local user to edito the content in
+          toolbars, drop-down menus and widgets which allow the local user to edit the content in
           the main content area.
         </p>
         <p>
@@ -71,7 +71,7 @@
         <p>
           Some remote participants would similarly load the same tool in a dedicated tile. But what
           if some users don't have the necessary permissions to load that tool? Or if they are
-          joining from a platform that does not support the tool? else.
+          joining from a platform that does not support the tool?
         </p>
         <p>
           The video conferencing solution may then choose to have one of the participants who have
