Linkify [[Element]] slot

--- a/index.html
+++ b/index.html
@@ -234,10 +234,9 @@
       </p>
       <ol>
         <li>
-          <!-- TODO(eladalon1983): Fix linkability of slots in the mediacapture-region spec. -->
-          If <var>cropTarget</var>.[[\Element]] does not represent an element that's in the DOM of
-          either the captured [=top-level browsing context=] or one of its descendant [=browsing
-          contexts=], abort without producing a new frame.
+          If <var>cropTarget</var>.{{CropTarget/[[Element]]}} does not represent an element that's
+          in the DOM of either the captured [=top-level browsing context=] or one of its descendant
+          [=browsing contexts=], abort without producing a new frame.
         </li>
         <li>
           <!-- TODO(eladalon1983 / mfoltzgoogle): Improve spec language around rendering. -->
