Rephrase frame production algorithm extension

--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@
     <section id="applying-the-restriction-transformation">
       <h2><dfn>Applying the restriction transformation</dfn></h2>
       <p>
-        When it's time to produce <var>frame</var> for a video track <var>videoTrack</var> that is
-        [=restricted=] to a given target <var>cropTarget</var>, execute the following algorithm:
+        Whenever the user agent is about to produce a new <var>frame</var> for a video track
+        <var>videoTrack</var> that is [=restricted=] to a given target <var>cropTarget</var>, the
+        user agent MUST execute the following algorithm:
       </p>
       <ol>
         <li>
