--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
             <li>
               <var>E</var> forms a <a data-cite="filter-effects-2/#backdrop-root">backdrop root</a>.
             </li>
+            <li>
+              <var>E</var> is <a data-cite="css-images-4/#element-not-rendered">rendered</a>.
+            </li>
           </ul>
           <div class="note">
             <p>To ensure these conditions hold, developers may use CSS such as the following snippet:</p>
