--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </li>
             <li>
               <p>
-                <var>E</var> only has one <a data-cite="css-break-4/#box-fragment">box fragment</a>.
+                <var>E</var> has exactly one <a data-cite="css-break-4/#box-fragment">box fragment</a>.
               </p>
             </li>
             <li>
