Use American spelling of fulfill

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h4>Restrictable tracks</h4>
           <p>
             We say that a {{MediaStreamTrack}} <var>T</var> is a
-            <dfn>restrictable MediaStreamTrack</dfn> if and only if it fulfils all of the following
+            <dfn>restrictable MediaStreamTrack</dfn> if and only if it fulfills all of the following
             conditions:
           </p>
           <ul>
@@ -173,7 +173,8 @@
             </li>
             <li>
               <p>
-                <var>E</var> has exactly one <a data-cite="css-break-4/#box-fragment">box fragment</a>.
+                <var>E</var> has exactly one
+                <a data-cite="css-break-4/#box-fragment">box fragment</a>.
               </p>
             </li>
             <li>
