Use lower case variable name

--- a/index.html
+++ b/index.html
@@ -466,10 +466,10 @@
         <p>Code in the capture-target:</p>
         <pre class="javascript">
           const mainContentArea = navigator.getElementById('mainContentArea');
-          const RestrictionTarget = await RestrictionTarget.fromElement(mainContentArea);
-          sendRestrictionTarget(RestrictionTarget);
+          const restrictionTarget = await RestrictionTarget.fromElement(mainContentArea);
+          sendRestrictionTarget(restrictionTarget);
 
-          function sendRestrictionTarget(RestrictionTarget) {
+          function sendRestrictionTarget(restrictionTarget) {
             // Either send the restriction-target using postMessage(),
             // or pass it on locally within the same document.
           }
