[Editorial] Rerun formatter

--- a/index.html
+++ b/index.html
@@ -338,9 +338,7 @@
             </li>
             <li><var>E</var>'s set of CSS attributes changes.</li>
           </ul>
-          <p>
-            Invalidity will suppress additional frames until validity is restored.
-          </p>
+          <p>Invalidity will suppress additional frames until validity is restored.</p>
         </div>
       </section>
       <section id="browser-capture-media-stream-track-extension">
