--- a/index.html
+++ b/index.html
@@ -336,7 +336,10 @@
               <var>T</var>.<a data-cite="mediacapture-streams/#dfn-source-0">[[\Source]]</a> changes
               due to user interaction with the user agent and/or operating system.
             </li>
-            <li><var>E</var>'s set of CSS attributes changes.</li>
+            <li>
+              <var>E</var>'s set of CSS attributes change such that E is
+              no longer [=eligible for restriction=].
+            </li>
           </ul>
           <p>Invalidity will suppress additional frames until validity is restored.</p>
         </div>
