--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
               due to user interaction with the user agent and/or operating system.
             </li>
             <li>
-              <var>E</var>'s set of CSS attributes change such that E is
+              <var>E</var>'s set of CSS attributes change such that <var>E</var> is
               no longer [=eligible for restriction=].
             </li>
           </ul>
