Add citation for stacking context

--- a/index.html
+++ b/index.html
@@ -264,16 +264,16 @@
           <h4>Elements eligible for restriction</h4>
           <p>
             We say that an {{Element}} <var>E</var> is <dfn>eligible for restriction</dfn> if and
-            only if it fulfils all of the following conditions:
+            only if it fulfills all of the following conditions:
           </p>
           <ul>
             <li>
-              <p><var>E</var> forms a stacking context.</p>
+              <p><var>E</var> forms a <a data-cite="css2ed#stacking-context">stacking context</a>.</p>
             </li>
             <li>
               <p>
                 <var>E</var> is
-                <a data-cite="css-transforms-2#grouping-property-values">flattened in 3D.</a>
+                <a data-cite="css-transforms-2#grouping-property-values">flattened in 3D</a>.
               </p>
             </li>
             <li>
@@ -531,7 +531,7 @@
         </p>
         <p>
           The mechanisms introduced in this specification allow a responsible application to
-          structure itself in a way that would completely guaratnee that such issues are impossible.
+          structure itself in a way that would completely guarantee that such issues are impossible.
           Such an application can more easily make and keep privacy guarantees to its users.
         </p>
       </section>
@@ -552,7 +552,7 @@
           </p>
         </section>
         <section>
-          <h3>Aggravating old attack vetors</h3>
+          <h3>Aggravating old attack vectors</h3>
           <p>
             The main concern is that the mechanisms we introduce in this specification should not
             <b>aggravate</b> the old attack vectors described above. One naturally worries that the
