Update to use citation

--- a/index.html
+++ b/index.html
@@ -459,14 +459,10 @@
         </li>
       </ol>
       <p>
-        Let the <dfn>decorated bounding box</dfn> of an element be smallest
-        axis-aligned rectangle that contains
-        the <a data-cite="css-backgrounds-3#border-image-area">border image areas</a> of the
-        element's principal box.
-      <p>
         The frame produced in the final step is constructed by
         rendering <var>E</var> and its descendants over an infinite transparent
-        canvas, positioned so that the edges of the <a>decorated bounding
+        canvas, positioned so that the edges of the
+        <a data-cite="!css-images-4#decorated-bounding-box">decorated bounding
         box</a> are flush with the edges of the frame.
       </p>
       <p class="note">
