--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
                       <var>p</var> when it is guaranteed that no more frames [=restricted=]
                       (or [=unrestricted=]) according to <var>PRE-STATE</var> will be delivered to
                       the application, and that any additional frames delivered to the application
-                      will therefore be [=restricted=] (or [=unrestricted=]) according to
-                      either <var>POST-STATE</var> or a later state.
+                      will therefore be [=restricted=] (or [=unrestricted=]) according to either
+                      <var>POST-STATE</var> or a later state.
                     </p>
                   </li>
                 </ol>
