Clarify references to internal slots

--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
               through a call to {{MediaDevices/getDisplayMedia()}}, or a clone of such a track.
             </li>
             <li>
-              <var>T</var>.<a data-cite="mediacapture-streams/#dfn-kind">kind</a> is
+              <var>T</var>.<a data-cite="mediacapture-streams/#dfn-kind">[[\Kind]]</a> is
               <a data-cite="mediacapture-streams/#dfn-video">"video"</a>.
             </li>
             <li>
-              <var>T</var>.<a data-cite="mediacapture-streams/#dfn-readystate">readyState</a> is
+              <var>T</var>.<a data-cite="mediacapture-streams/#dfn-readystate">[[\ReadyState]]</a> is
               <a data-cite="mediacapture-streams/#idl-def-MediaStreamTrackState.live">"live"</a>.
             </li>
             <li><var>T</var> is not <a data-cite="mediacapture-region#dfn-cropped">cropped</a>.</li>
