Make only [[Restrictable]] tracks restrictable

--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
             conditions:
           </p>
           <ul>
+            <!-- TODO: Use spec-linking after merging https://github.com/w3c/mediacapture-main/pull/1015. -->
+            <li><var>T</var>.<code>[[\Restrictable]]</code> is <code>true</code>.</li>
             <li>
               <var>T</var> is associated with a
               <a data-cite="screen-capture/#dfn-browser">browser</a>
