Fix broken link

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <p>
           All tasks queued below use the
           <a data-cite="!HTML#rendering-task-source">rendering task source</a> associated with the
-          same <a data-cite="!HTML#global object">global object</a> as the
+          same <a data-cite="!HTML#global-object">global object</a> as the
           {{BrowserCaptureMediaStreamTrack}}.
         </p>
         <dl
