Fix spec linking to [[Restrictable]]

--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@
             conditions:
           </p>
           <ul>
-            <!-- TODO: Use spec-linking after merging https://github.com/w3c/mediacapture-main/pull/1015. -->
-            <li>|T|.<code>[[\Restrictable]]</code> is <code>true</code>.</li>
+            <li>|T|.{{MediaStreamTrack/[[Restrictable]]}} is <code>true</code>.</li>
             <li>
               |T| is associated with a
               <a data-cite="screen-capture/#dfn-browser">browser</a>
